# ArticuLearn

./: README.md  jest.config.js  package-lock.json  package.json
app/: .gitignore  .pre-commit-config.yaml  Dockerfile  crud.py  learning_path_fixture.json  main.py  manage.py  models.py  pyproject.toml  schemas.py
app/articles/: admin.py  models.py  serializers.py  urls.py  views.py
app/articles/migrations/: 0001_initial.py
app/articulearn/: asgi.py  settings.py  urls.py  wsgi.py
app/exercises/: ai_exercise.py  one_sentence_challenge.py
app/learning_paths/: apps.py  models.py  serializers.py  urls.py  views.py
app/learning_paths/migrations/: 0001_initial.py  0002_alter_activitynode_options_alter_badgenode_options_and_more.py
app/practice/: apps.py  practice_session.py
app/src/: crud.py  database.py  models.py  schemas.py
app/src/articles/: crud.py  models.py  schemas.py
app/src/badges/: crud.py  models.py  schemas.py
app/src/exercises/: README.md  one_sentence_challenge.py
app/src/quizzes/: crud.py  models.py  schemas.py
app/src/videos/: crud.py  models.py  schemas.py
src/: App.tsx
src/components/: ActivityNode.tsx  LearningPath.tsx
src/tests/: Activity.test.tsx
ui/: Dockerfile  index.html  jest.config.cjs  package-lock.json  package.json  tsconfig.json
ui/src/: App.tsx
ui/src/components/: Activity.tsx  ActivityCard.tsx  ActivityNode.tsx  Article.tsx  ArticlesPage.tsx  Badge.tsx  BadgesPage.tsx  LearningPath.tsx  LearningPathNode.tsx  NavigationBar.tsx  Quiz.tsx  QuizzesPage.tsx  Theme.ts  Video.tsx  VideosPage.tsx
(+10 files in other folders)
