[tool.poetry]
name = "articulearn"
version = "0.1.0"
description = ""
authors = ["dominik-air <domzurek@student.agh.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
djangorestframework = "^3.14.0"
langchain = "^0.1.12"
langchain-openai = "^0.0.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
