[tool.poetry]
name = "articulearn"
version = "0.1.0"
description = ""
authors = ["dominik-air <domzurek@student.agh.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
sqlalchemy = "^2.0.29"
uvicorn = "^0.29.0"
aiosqlite = "^0.20.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
