[tool.poetry]
name = "articulearn"
version = "0.1.0"
description = "Backend for the ArticuLearn app."
authors = ["dominik-air <domzurek@student.agh.edu.pl>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
sqlalchemy = "^2.0.29"
uvicorn = "^0.29.0"
aiosqlite = "^0.20.0"
pip = "^24.0"
greenlet = "^3.0.3"
langchain = "^0.1.16"
langchain-openai = "^0.1.3"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
